# demo2023

./: README.md
homework1/: num1.cpp  num2.cpp  num3.cpp
homework2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
xoxoxo/: CMakeLists.txt  instructions.sh  users.txt
xoxoxo/examples/: client1_config.txt  client2_config.txt  client3_config.txt  server_config.txt
xoxoxo/include/: config_reader.hpp  logger.hpp  tic_tac_toe_logic.hpp  user_manager.hpp
xoxoxo/src/: client_main.cpp  config_reader.cpp  logger.cpp  server_main.cpp  tic_tac_toe_logic.cpp  user_manager.cpp
